--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="mdui-card-primary">
 				<div class="mdui-card-primary-title">BZOJ 1000-4999</div>
 			</div>
-			<div class="mdui-card-content">
+			<div class="mdui-card-content mdui-theme-accent-blue">
 				<div class="mdui-textfield mdui-textfield-floating-label">
 					<label class="mdui-textfield-label">题目ID</label>
 					<input class="mdui-textfield-input" id="id" name="id" type="text" required="required">
