--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					function g1() {
 						var val = document.getElementById('id').value;
 						if (val < 1000 || val > 4999) mdui.snackbar({message: '请输入1000-4999之间的数字',position: 'top'});
-						else self.open('https://bzoj.zcmimi.tk/p/' + val + '.html');
+						else self.open('https://bzpro.netlify.app/JudgeOnline/' + val + '.html');
 					}
 					function g2() {
 						var val = document.getElementById('id').value;
