--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						if ((e.keyCode || e.which) == 13){
 							var val = document.getElementById('id').value;
 							if (val < 1000 || val > 4999) mdui.snackbar({message: '请输入1000-4999之间的数字',position: 'top'});
-							else{g1();g2();}
+							else{g1();}
 						}
 					}
 				</script>
